fixed Overflow (X)

--- a/nodejs/source/styles/datenLoeschen.css
+++ b/nodejs/source/styles/datenLoeschen.css
@@ -64,7 +64,7 @@
 .lowEnd {
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 100dvw;
 }
 
 
