--- a/nodejs/source/styles/lowerEnd.css
+++ b/nodejs/source/styles/lowerEnd.css
@@ -23,5 +23,5 @@
 .lowEnd {
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 100dvw;
 }
