--- a/nodejs/source/styles/navigator.css
+++ b/nodejs/source/styles/navigator.css
@@ -1,13 +1,9 @@
 .navigatorBackground {
     background-color: #212121;
     padding-left: 0px;
-    padding-right: 1vw;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100dvw;
     height: 7vh;
-    margin-top: 0vh;
-    margin-left: 0px;
-    margin-bottom: 0;
+    margin: 0px, 0px, 0px, 0px;
     text-align: right;
 }
 
@@ -20,8 +16,8 @@
     color: white;
     background-color: transparent;
 
-    width: 10vw;
-    height: 7vh;
+    width: 10dvw;
+    height: 7dvh;
     margin-top: 0.2vh;
     padding-top: 0vh;
     transition: 0.3s background-color;
